# scoreboard-api

./: .gitignore  Procfile  README.md  app.json  pyproject.toml  requirements.txt
scoreboard/: main.py  models.py
scoreboard/routers/: login.py  scoreboard.py
