[tool.poetry]
name = "scoreboard-api"
version = "0.1.0"
description = "An API to manage a scoreboard for a particular tournament."
authors = ["Harsh Navdhare <navdhareharsh2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.68.1"
python-jose = "3.3.0"
passlib = "1.7.4"
tortoise-orm = "0.17.7"
uvicorn = "0.13.4"
asyncpg = "0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
